style: fix text overflow on filenames in Files view

--- a/src/ui/files/_all.scss
+++ b/src/ui/files/_all.scss
@@ -45,6 +45,7 @@
     overflow: hidden;
     font-weight: $font-weight-semibold;
     text-overflow: ellipsis;
+    white-space: nowrap;
     transition: 150ms;
 
     &:hover {
